# chess_weekend

./: CMakeLists.txt  main.cpp
src/: agent_adaptive_search.cpp  agent_alpha_beta.cpp  bitboard.cc  bitboard.h  board.cc  board.h  board_test.cc  christian_utils.cpp  christian_utils.h  exception.h  game.hpp  lc0string.cc  pgn.h  piece_square_table_convert.py  piece_squares.hpp  uciloop.cc  uciloop.h  version.h
